# GeCSA

./: CMakeLists.txt  Gen_CSA.cpp  build_gecsa.cpp  fetch_file.sh  readme.md  run.sh  test_gecsa.cpp
Gtest/: CMakeLists.txt  GeCSA.txt  run.sh  test.cpp  test_demo.txt
Regular/: CMakeLists.txt  DFA.dot  NFA.dot  regular_analysis.cpp  regular_analysis.h  run.sh  test.cpp
Regular/DFA_analysis/: CMakeLists.txt
Regular/DFA_analysis/Automata/: Automata.h  CMakeLists.txt  FA.cpp  FA.h
Regular/DFA_analysis/Parser/: BREParser.cpp  BREParser.h  CMakeLists.txt
Regular/DFA_analysis/third_part/ATMPL/: LICENSE  README.md
Regular/DFA_analysis/third_part/ATMPL/any/: any.hpp  readme.md  test.cpp
Regular/DFA_analysis/third_part/ATMPL/functinal_helper/: bind.hpp  func_traits.hpp  readme.md  test.cpp
Regular/DFA_analysis/third_part/ATMPL/optional/: optional.hpp  optional_test.cpp  readme.md
Regular/DFA_analysis/util/: CMakeLists.txt  Set.h
divsufsort/: CMakeLists.txt
include/: ABS_Phi.h  BaseClass.h  CSA.h  Gen_Phi.h  InArray.h  Phi.h  broadword.hpp  intrinsics.hpp  loadkit.h  macros.h  parmaters.h  savekit.h  select.h  tables.hpp  timer.h
simd/: CMakeLists.txt  simd.cpp  simd.h
src/: CSA.cpp  CSA_Regular.cpp  DFA.dot  Gen_Phi.cpp  InArray.cpp  NFA.dot  Phi.cpp  loadkit.cpp  min_DFA.dot  savekit.cpp
test/: 46locate.sh  46locateresult.txt  47countresult.txt  47locate.sh  47locateresult.txt  47newcount.sh  47newcountresult.txt  47newlocateresult.txt  512.sh  512locateresult.txt  512locateresult1.txt  ABS_Phi.h  ERRcount.sh  ERRcountresult.txt  ERRlocate.sh  ERRlocateresult.txt  alllocate.sh  alllocateresult.txt  gaptest.py  gaptest.sh  gaptestresult64.txt  refblock.sh  refblockresult.txt  reftest.sh  reftestresult.txt  testcase
